--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6596142
-	trimbase = 
+	trim = cob_light
+	base = cdc71d4
+	trimbase = 6596142
 	parent = upstream
 	previous = abf4aaa
