--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e888dff
-	trimbase = 
+	trim = cob_generic_can
+	base = 24924b6
+	trimbase = e888dff
 	parent = upstream
 	previous = abf4aaa
