--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7180185
-	trimbase = 
+	trim = cob_driver
+	base = 02ca7f3
+	trimbase = 7180185
 	parent = upstream
 	previous = abf4aaa
