--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a1224b4
-	trimbase = 
+	trim = cob_canopen_motor
+	base = 38ddb5b
+	trimbase = a1224b4
 	parent = upstream
 	previous = abf4aaa
