--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ab1e9b1
-	trimbase = 
+	trim = cob_sick_s300
+	base = f82cefa
+	trimbase = ab1e9b1
 	parent = upstream
 	previous = abf4aaa
