--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 66e1d7b
-	trimbase = 
+	trim = cob_voltage_control
+	base = 8de1d5d
+	trimbase = 66e1d7b
 	parent = upstream
 	previous = abf4aaa
