--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7312731
-	trimbase = 
+	trim = cob_undercarriage_ctrl
+	base = be64d7d
+	trimbase = 7312731
 	parent = upstream
 	previous = abf4aaa
