--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = cbf1743
-	trimbase = 
+	trim = cob_relayboard
+	base = 83dbe57
+	trimbase = cbf1743
 	parent = upstream
 	previous = abf4aaa
