--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9671141
-	trimbase = 
+	trim = cob_cam3d_throttle
+	base = 2404f2e
+	trimbase = 9671141
 	parent = upstream
 	previous = abf4aaa
