--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 58e6045
-	trimbase = 
+	trim = cob_collision_velocity_filter
+	base = d7a34d3
+	trimbase = 58e6045
 	parent = upstream
 	previous = abf4aaa
