--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = bd85b94
-	trimbase = 
+	trim = cob_sick_lms1xx
+	base = 4c9a980
+	trimbase = bd85b94
 	parent = upstream
 	previous = abf4aaa
