--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8c935e0
-	trimbase = 
+	trim = cob_base_drive_chain
+	base = c490f5d
+	trimbase = 8c935e0
 	parent = upstream
 	previous = abf4aaa
