--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 542a41d
-	trimbase = 
+	trim = cob_phidgets
+	base = e77c31b
+	trimbase = 542a41d
 	parent = upstream
 	previous = abf4aaa
