--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ce47ec0
-	trimbase = 
+	trim = cob_sound
+	base = 791c548
+	trimbase = ce47ec0
 	parent = upstream
 	previous = abf4aaa
