--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 17da1a5
-	trimbase = 
+	trim = cob_utilities
+	base = e5e3386
+	trimbase = 17da1a5
 	parent = upstream
 	previous = abf4aaa
