--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 66a077e
-	trimbase = 
+	trim = cob_hokuyo
+	base = 594a7b7
+	trimbase = 66a077e
 	parent = upstream
 	previous = abf4aaa
