--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d5976d1
-	trimbase = 
+	trim = cob_base_velocity_smoother
+	base = 9a5cb97
+	trimbase = d5976d1
 	parent = upstream
 	previous = abf4aaa
