--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6d0ea32
-	trimbase = 
+	trim = cob_head_axis
+	base = df00493
+	trimbase = 6d0ea32
 	parent = upstream
 	previous = abf4aaa
