--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6526707
-	trimbase = 
+	trim = cob_camera_sensors
+	base = 50c9f53
+	trimbase = 6526707
 	parent = upstream
 	previous = abf4aaa
