--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 32d159c
-	trimbase = 
+	trim = cob_trajectory_controller
+	base = 863ead9
+	trimbase = 32d159c
 	parent = upstream
 	previous = abf4aaa
