--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = be64d7d
+	base = f64a58c
 	trimbase = 
 	parent = release/hydro/cob_undercarriage_ctrl
-	previous = 
+	previous = be64d7d
