--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = daa634a
+	base = a2d2053
 	trimbase = 
 	parent = debian/hydro/cob_undercarriage_ctrl
-	previous = 
+	previous = daa634a
