--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 50c9f53
+	base = 7306be2
 	trimbase = 
 	parent = release/hydro/cob_camera_sensors
-	previous = 
+	previous = 50c9f53
