--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 945c075
+	base = e9ca065
 	trimbase = 
 	parent = debian/hydro/cob_camera_sensors
-	previous = 
+	previous = 945c075
