--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e77c31b
+	base = eda98f4
 	trimbase = 
 	parent = release/hydro/cob_phidgets
-	previous = 
+	previous = e77c31b
