--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = caf4627
+	base = 2d99d07
 	trimbase = 
 	parent = debian/hydro/cob_phidgets
-	previous = 
+	previous = caf4627
