--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = caf4627
+	base = 0c8e3a9
 	trimbase = 
 	parent = debian/hydro/cob_phidgets
-	previous = 
+	previous = caf4627
