--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e5e3386
+	base = 1893e00
 	trimbase = 
 	parent = release/hydro/cob_utilities
-	previous = 
+	previous = e5e3386
