--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 731c7cf
+	base = 0d717d0
 	trimbase = 
 	parent = debian/hydro/cob_utilities
-	previous = 
+	previous = 731c7cf
