--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d7a34d3
+	base = 8e25d25
 	trimbase = 
 	parent = release/hydro/cob_collision_velocity_filter
-	previous = 
+	previous = d7a34d3
