--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 33b8cd7
+	base = ec90679
 	trimbase = 
 	parent = debian/hydro/cob_collision_velocity_filter
-	previous = 
+	previous = 33b8cd7
