--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8de1d5d
+	base = 78aa233
 	trimbase = 
 	parent = release/hydro/cob_voltage_control
-	previous = 
+	previous = 8de1d5d
