--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 26f8852
+	base = 9866dc5
 	trimbase = 
 	parent = debian/hydro/cob_voltage_control
-	previous = 
+	previous = 26f8852
