--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = df00493
+	base = 54a0b28
 	trimbase = 
 	parent = release/hydro/cob_head_axis
-	previous = 
+	previous = df00493
