--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d3a54bd
+	base = fafd0cc
 	trimbase = 
 	parent = debian/hydro/cob_head_axis
-	previous = 
+	previous = d3a54bd
