--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c490f5d
+	base = 7866995
 	trimbase = 
 	parent = release/hydro/cob_base_drive_chain
-	previous = 
+	previous = c490f5d
