--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 123fd4b
+	base = 8062af0
 	trimbase = 
 	parent = debian/hydro/cob_base_drive_chain
-	previous = 
+	previous = 123fd4b
