--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9a5cb97
+	base = a701af2
 	trimbase = 
 	parent = release/hydro/cob_base_velocity_smoother
-	previous = 
+	previous = 9a5cb97
