--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 813dfbe
+	base = 9dbdb8d
 	trimbase = 
 	parent = debian/hydro/cob_base_velocity_smoother
-	previous = 
+	previous = 813dfbe
