--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f95c64e
+	base = 77c54e2
 	trimbase = 
 	parent = release/hydro/cob_hwboard
-	previous = 
+	previous = f95c64e
