--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9342007
+	base = 8452166
 	trimbase = 
 	parent = debian/hydro/cob_hwboard
-	previous = 
+	previous = 9342007
