--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 38ddb5b
+	base = c401561
 	trimbase = 
 	parent = release/hydro/cob_canopen_motor
-	previous = 
+	previous = 38ddb5b
