--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1e0b644
+	base = cd5ac70
 	trimbase = 
 	parent = debian/hydro/cob_canopen_motor
-	previous = 
+	previous = 1e0b644
