--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 791c548
+	base = 55194ad
 	trimbase = 
 	parent = release/hydro/cob_sound
-	previous = 
+	previous = 791c548
