--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8976bd1
+	base = fab215e
 	trimbase = 
 	parent = debian/hydro/cob_sound
-	previous = 
+	previous = 8976bd1
