--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2404f2e
+	base = 381f807
 	trimbase = 
 	parent = release/hydro/cob_cam3d_throttle
-	previous = 
+	previous = 2404f2e
