--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cf847b0
+	base = fc2af74
 	trimbase = 
 	parent = debian/hydro/cob_cam3d_throttle
-	previous = 
+	previous = cf847b0
