--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cdc71d4
+	base = 6ead768
 	trimbase = 
 	parent = release/hydro/cob_light
-	previous = 
+	previous = cdc71d4
