--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ddcab67
+	base = 68120fe
 	trimbase = 
 	parent = debian/hydro/cob_light
-	previous = 
+	previous = ddcab67
