--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3738e35
+	base = 0c0a50c
 	trimbase = 
 	parent = release/hydro/cob_footprint_observer
-	previous = 
+	previous = 3738e35
