--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 85beb43
+	base = 4c22a81
 	trimbase = 
 	parent = debian/hydro/cob_footprint_observer
-	previous = 
+	previous = 85beb43
