--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 863ead9
+	base = 1218de7
 	trimbase = 
 	parent = release/hydro/cob_trajectory_controller
-	previous = 
+	previous = 863ead9
