--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 478dfef
+	base = 5bf7421
 	trimbase = 
 	parent = debian/hydro/cob_trajectory_controller
-	previous = 
+	previous = 478dfef
