--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 594a7b7
+	base = 58e9f4d
 	trimbase = 
 	parent = release/hydro/cob_hokuyo
-	previous = 
+	previous = 594a7b7
