--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 29946e1
+	base = 5638c1a
 	trimbase = 
 	parent = debian/hydro/cob_hokuyo
-	previous = 
+	previous = 29946e1
