--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 83dbe57
+	base = 970af38
 	trimbase = 
 	parent = release/hydro/cob_relayboard
-	previous = 
+	previous = 83dbe57
