--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 890a119
+	base = 92585a7
 	trimbase = 
 	parent = debian/hydro/cob_relayboard
-	previous = 
+	previous = 890a119
