--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f82cefa
+	base = 2e071b9
 	trimbase = 
 	parent = release/hydro/cob_sick_s300
-	previous = 
+	previous = f82cefa
