--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f62eaee
+	base = 14f56b1
 	trimbase = 
 	parent = debian/hydro/cob_sick_s300
-	previous = 
+	previous = f62eaee
