--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f62eaee
+	base = 3df9f2c
 	trimbase = 
 	parent = debian/hydro/cob_sick_s300
-	previous = 
+	previous = f62eaee
