--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 24924b6
+	base = 20b5817
 	trimbase = 
 	parent = release/hydro/cob_generic_can
-	previous = 
+	previous = 24924b6
