--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f8c4be9
+	base = e31ca0d
 	trimbase = 
 	parent = debian/hydro/cob_generic_can
-	previous = 
+	previous = f8c4be9
