--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 02ca7f3
+	base = 3c8c3dd
 	trimbase = 
 	parent = release/hydro/cob_driver
-	previous = 
+	previous = 02ca7f3
