--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5847e0e
+	base = 971418a
 	trimbase = 
 	parent = debian/hydro/cob_driver
-	previous = 
+	previous = 5847e0e
