--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4c9a980
+	base = 609c0a2
 	trimbase = 
 	parent = release/hydro/cob_sick_lms1xx
-	previous = 
+	previous = 4c9a980
