--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cff2cb2
+	base = a24b592
 	trimbase = 
 	parent = debian/hydro/cob_sick_lms1xx
-	previous = 
+	previous = cff2cb2
