--- a/cob_voltage_control/CMakeLists.txt
+++ b/cob_voltage_control/CMakeLists.txt
@@ -14,8 +14,7 @@ generate_dynamic_reconfigure_options(cfg/cob_voltage_control.cfg)
 ## catkin specific configuration ##
 ###################################
 catkin_package(
-    DEPENDS roscpp libphidgets cob_relayboard rospy dynamic_reconfigure
-    CATKIN_DEPENDS # TODO
+    CATKIN_DEPENDS roscpp libphidgets cob_relayboard rospy dynamic_reconfigure
     INCLUDE_DIRS 
     LIBRARIES 
 )
@@ -24,7 +23,7 @@ catkin_package(
 ## Build ##
 ###########
 # add include search paths
-include_directories(common/include common/src ${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
+include_directories(common/src ${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
 
 
 add_executable(cob_voltage_control ros/src/cob_voltage_control_ros.cpp)
