--- a/cob_camera_sensors/package.xml
+++ b/cob_camera_sensors/package.xml
@@ -16,6 +16,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>pluginlib</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>message_filters</build_depend>
   <build_depend>nodelet</build_depend>
@@ -23,6 +24,8 @@
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>pluginlib</run_depend>
+  <run_depend>std_msgs</run_depend>
+
   <run_depend>message_runtime</run_depend>
   <run_depend>message_filters</run_depend>
   <run_depend>nodelet</run_depend>
