--- a/cob_head_axis/package.xml
+++ b/cob_head_axis/package.xml
@@ -9,7 +9,7 @@
   <url type="website">http://ros.org/wiki/cob_head_axis</url>
   <!-- <url type="bugtracker"></url> -->
 
-  <maintainer email="uhr@ipa.fhg.de">Ulrich Reiser</maintainer>
+  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer>
   <author>Ulrich Reiser</author>
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -32,6 +32,7 @@
   <run_depend>cob_canopen_motor</run_depend>
   <run_depend>cob_utilities</run_depend>
   <run_depend>urdf</run_depend>
+  <run_depend>rostest</run_depend>
   <run_depend>libntcan</run_depend>
   <run_depend>diagnostic_msgs</run_depend>
   <run_depend>control_msgs</run_depend>
