--- a/cob_light/package.xml
+++ b/cob_light/package.xml
@@ -18,6 +18,8 @@
   <build_depend>visualization_msgs</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>diagnostic_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <run_depend>rospy</run_depend>
@@ -25,8 +27,12 @@
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  
   <run_depend>actionlib</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
   <run_depend>diagnostic_msgs</run_depend>
+
   <!-- <test_depend>rospy</test_depend> -->
   <!-- <test_depend>roscpp</test_depend> -->
   <!-- <test_depend>std_msgs</test_depend> -->
