--- a/cob_phidgets/package.xml
+++ b/cob_phidgets/package.xml
@@ -17,11 +17,13 @@
   <build_depend>libphidgets</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>libphidgets</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>message_runtime</run_depend>
   <!-- <test_depend>roscpp</test_depend> -->
   <!-- <test_depend>rospy</test_depend> -->
   <!-- <test_depend>libphidgets</test_depend> -->
