--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_light
-	base = 799d99e
-	trimbase = 
+	base = 0b83ffb
+	trimbase = 799d99e
 	parent = upstream
 	previous = 439101e
