--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_generic_can
-	base = 2896154
-	trimbase = 
+	base = e19ed23
+	trimbase = 2896154
 	parent = upstream
 	previous = 439101e
