--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_driver
-	base = 1d3f4a7
-	trimbase = 
+	base = 146590c
+	trimbase = 1d3f4a7
 	parent = upstream
 	previous = 439101e
