--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_canopen_motor
-	base = 2ef2106
-	trimbase = 
+	base = 7236482
+	trimbase = 2ef2106
 	parent = upstream
 	previous = 439101e
