--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_sick_s300
-	base = 850f981
-	trimbase = 
+	base = ccab4d1
+	trimbase = 850f981
 	parent = upstream
 	previous = 439101e
