--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_voltage_control
-	base = 93f8819
-	trimbase = 
+	base = cdf16fe
+	trimbase = 93f8819
 	parent = upstream
 	previous = 439101e
