--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_undercarriage_ctrl
 	base = be64d7d
-	trimbase = 7312731
+	trimbase = 
 	parent = upstream
 	previous = abf4aaa
