--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_undercarriage_ctrl
-	base = daeff83
-	trimbase = 
+	base = 849ff98
+	trimbase = daeff83
 	parent = upstream
 	previous = 439101e
