--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_relayboard
-	base = 63661d9
-	trimbase = 
+	base = e99e98e
+	trimbase = 63661d9
 	parent = upstream
 	previous = 439101e
