--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_hwboard
-	base = b9acfaa
-	trimbase = 
+	base = e637f7a
+	trimbase = b9acfaa
 	parent = upstream
 	previous = 439101e
