--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_cam3d_throttle
-	base = 0f6a5ad
-	trimbase = 
+	base = 72e9f59
+	trimbase = 0f6a5ad
 	parent = upstream
 	previous = 439101e
