--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_collision_velocity_filter
-	base = 4374881
-	trimbase = 
+	base = cda8e2d
+	trimbase = 4374881
 	parent = upstream
 	previous = 439101e
