--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_sick_lms1xx
-	base = 586584d
-	trimbase = 
+	base = c1e2a91
+	trimbase = 586584d
 	parent = upstream
 	previous = 439101e
