--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_base_drive_chain
 	base = c490f5d
-	trimbase = 8c935e0
+	trimbase = 
 	parent = upstream
 	previous = abf4aaa
