--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_phidgets
-	base = 8916a9c
-	trimbase = 
+	base = 0553142
+	trimbase = 8916a9c
 	parent = upstream
 	previous = 439101e
