--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_sound
-	base = 1f37a45
-	trimbase = 
+	base = 1f3b10c
+	trimbase = 1f37a45
 	parent = upstream
 	previous = 439101e
