--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_utilities
-	base = f7fe311
-	trimbase = 
+	base = 30851d3
+	trimbase = f7fe311
 	parent = upstream
 	previous = 439101e
