--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_hokuyo
-	base = 2476266
-	trimbase = 
+	base = 9284cfb
+	trimbase = 2476266
 	parent = upstream
 	previous = 439101e
