--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_footprint_observer
 	base = 3738e35
-	trimbase = 8316946
+	trimbase = 
 	parent = upstream
 	previous = abf4aaa
