--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_footprint_observer
-	base = 9ed1bb2
-	trimbase = 
+	base = 7021222
+	trimbase = 9ed1bb2
 	parent = upstream
 	previous = 439101e
