--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_base_velocity_smoother
-	base = c773d91
-	trimbase = 
+	base = 40597e4
+	trimbase = c773d91
 	parent = upstream
 	previous = 439101e
