--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_head_axis
-	base = ea45bc2
-	trimbase = 
+	base = 7693bdd
+	trimbase = ea45bc2
 	parent = upstream
 	previous = 439101e
