--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_camera_sensors
-	base = 28ace62
-	trimbase = 
+	base = 5e6a093
+	trimbase = 28ace62
 	parent = upstream
 	previous = 439101e
