--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_trajectory_controller
 	base = 863ead9
-	trimbase = 32d159c
+	trimbase = 
 	parent = upstream
 	previous = abf4aaa
