--- a/package.xml
+++ b/package.xml
@@ -9,7 +9,7 @@
   <url type="website">http://ros.org/wiki/cob_utilities</url>
   <!-- <url type="bugtracker"></url> -->
 
-  <maintainer email="cpc@ipa.fhg.de">Christian Connette</maintainer>
+  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer>
   <author>Christian Connette</author>
 
 
