--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>cob_srvs</build_depend>
   <build_depend>diagnostic_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <run_depend>rospy</run_depend>
   <run_depend>roscpp</run_depend>
@@ -30,6 +31,7 @@
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>cob_srvs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
   <run_depend>diagnostic_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <!-- <test_depend>rospy</test_depend> -->
