--- a/package.xml
+++ b/package.xml
@@ -8,7 +8,7 @@
   <!-- <url type="bugtracker"></url> -->
 
   <author>Christian Connette</author>
-  <maintainer email="cpc@ipa.fhg.de">Christian Connette</maintainer>
+  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer>
 
 
   <buildtool_depend>catkin</buildtool_depend>
