--- a/cob_base_velocity_smoother/CMakeLists.txt
+++ b/cob_base_velocity_smoother/CMakeLists.txt
@@ -42,3 +42,8 @@ install(TARGETS cob_base_velocity_smoother
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
+
+
