--- a/cob_collision_velocity_filter/CMakeLists.txt
+++ b/cob_collision_velocity_filter/CMakeLists.txt
@@ -54,5 +54,7 @@ install(TARGETS collision_velocity_filter
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-
+install(DIRECTORY include/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+)
 
