--- a/cob_hwboard/CMakeLists.txt
+++ b/cob_hwboard/CMakeLists.txt
@@ -14,5 +14,5 @@ catkin_package(
 )
 
 install(PROGRAMS src/cob_hwboard.py
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/src
 )
