--- a/cob_utilities/CMakeLists.txt
+++ b/cob_utilities/CMakeLists.txt
@@ -39,6 +39,8 @@ install(TARGETS ${PROJECT_NAME}
 )
 
 
-install(DIRECTORY common/include/
-  DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}
+install(DIRECTORY common/include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+  PATTERN ".svn" EXCLUDE
 )
