--- a/cob_canopen_motor/CMakeLists.txt
+++ b/cob_canopen_motor/CMakeLists.txt
@@ -35,6 +35,6 @@ install(TARGETS ${PROJECT_NAME}_harmonica
 )
 
 
-install(DIRECTORY common/include/
-  DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}
+install(DIRECTORY common/include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
 )
