--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_driver
-	base = 52314ce
-	trimbase = 
+	base = e172efe
+	trimbase = 52314ce
 	parent = upstream
 	previous = f6fedfd
